--- a/src/Zhyttya.UI.Uno/Zhyttya.UI.Uno.Mobile/Zhyttya.UI.Uno.Mobile.csproj
+++ b/src/Zhyttya.UI.Uno/Zhyttya.UI.Uno.Mobile/Zhyttya.UI.Uno.Mobile.csproj
@@ -18,6 +18,7 @@
     <SupportedOSPlatformVersion Condition="'$(TargetFramework)'=='net6.0-macos'">10.14</SupportedOSPlatformVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="gmaps-api-net" Version="0.33.0" />
     <PackageReference Include="Uno.WinUI" Version="4.4.13" />
     <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.4.13" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.4.13" />
