--- a/src/Zhyttya.UI.Uno/Zhyttya.UI.Uno.Skia.Wpf/Zhyttya.UI.Uno.Skia.Wpf.csproj
+++ b/src/Zhyttya.UI.Uno/Zhyttya.UI.Uno.Skia.Wpf/Zhyttya.UI.Uno.Skia.Wpf.csproj
@@ -7,6 +7,7 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="gmaps-api-net" Version="0.33.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
     <PackageReference Include="Uno.WinUI.Skia.Wpf" Version="4.4.13" />
