--- a/src/Zhyttya.UI.Uno/Zhyttya.UI.Uno.Wasm/Zhyttya.UI.Uno.Wasm.csproj
+++ b/src/Zhyttya.UI.Uno/Zhyttya.UI.Uno.Wasm/Zhyttya.UI.Uno.Wasm.csproj
@@ -40,6 +40,7 @@
     <None Include="wwwroot\web.config" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="gmaps-api-net" Version="0.33.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
     <PackageReference Include="Microsoft.Windows.Compatibility" Version="6.0.0" />
     <PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
